--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./src/index.js" type="module"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
